--- a/game.html
+++ b/game.html
@@ -24,6 +24,9 @@
     </div>
 
 
+        <button id="play-again" onclick="playAgain()">Play Again</button>
+
+
     <script src="./script.js"></script>
 </body>
 
